Edit z-index to recent gallery fixed button to style.css to bring up to front

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,7 +289,7 @@
 .back-to-top{position:fixed !important;right:25px;bottom:-50px;background-color:#ffc925;color:#fff;font-family:"Montserrat", sans-serif;display:block;font-size:11px;width:40px;height:40px;line-height:40px;text-align:center;filter:alpha(opacity=0);opacity:0;visibility:hidden;z-index:9999;cursor:pointer;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;}
 .back-to-top:hover{background-color:#333;color:#fff;}
 .back-to-top.show{filter:alpha(opacity=100);opacity:1;visibility:visible;bottom:30px;}
-.fixed-btn{position:fixed;bottom:50%;left:-13%;background:#0FACF3;width:30%;height:5%;line-height:45px;border-radius:3px;cursor:pointer;transform:rotate(90deg);margin:0;padding:0;}
+.fixed-btn{position:fixed;bottom:50%;left:-13%;background:#0FACF3;width:30%;height:5%;line-height:45px;border-radius:3px;cursor:pointer;transform:rotate(90deg);margin:0;padding:0;z-index:100;}
 .fixed-btn p{text-transform:uppercase;font-family:arial;font-weight:900;color:#fff;text-align:center;}
 .fixed-btn:active{box-shadow:0 0;}
 .bwp-spacer:before,
